--- a/NZwalks/appsettings.json
+++ b/NZwalks/appsettings.json
@@ -9,4 +9,10 @@
     "ConnectionStrings": {
         "NZWalksConnectionString": "Server=CSI-PF5CM005\\SQLEXPRESS;Database=NZWalksDb;Trusted_Connection=True;TrustServerCertificate=True"
     },
+    "Jwt": {
+        "Key": "bbuosyJSSGPOosflUSJ75JJHst6yjjjST5rt65SYSko098HHhgst",
+        "Issuer": "http://localhost:5068",
+        "Audience": "http://localhost:5068",
+
+    }
 }
